--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -14,6 +14,7 @@
         <td>{{customer.customerNo}}</td>
         <td>{{customer.name}}</td>
         <td>{{customer.age}}</td>
+        <td>{{customer.city}}</td>
         <td>{{customer.state}}</td>
     </tr>
 </tbody>
