--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,6 +10,7 @@
 
     <app-hearder></app-hearder>
     <app-customer></app-customer>
+    <app-boxmap></app-boxmap>
     <app-footer></app-footer>
 
 </body>
