--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -126,7 +126,7 @@
     </div>
     <!-- end /.footer-big -->
   
-    <div class="mini-footer">
+    <!-- <div class="mini-footer">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
@@ -137,11 +137,9 @@
               </p>
             </div>
   
-            <!-- <div class="go_top">
-              <span class="icon-arrow-up"></span>
-            </div> -->
+            
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </footer>
